--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@stencil/core": "3.2.0"
+    "@stencil/core": "3.2.0",
+    "@stencil/store": "^2.0.5"
   },
   "devDependencies": {
     "@types/jest": "27.0.3",
