--- a/storybook/package.json
+++ b/storybook/package.json
@@ -12,27 +12,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-     "@storybook/addon-essentials": "7.0.0-rc.10",
-    "@storybook/addon-links": "7.0.0-rc.10",
-    "@storybook/blocks": "7.0.0-rc.10",
-    "@storybook/test-runner": "0.10.0-next.11",
-    "@storybook/testing-library": "0.0.14-next.1",
-    "@storybook/web-components": "7.0.0-rc.10",
-    "@storybook/web-components-webpack5": "7.0.0-rc.10",
+    "@storybook/addon-essentials": "7.0.2",
+    "@storybook/addon-links": "7.0.2",
+    "@storybook/addon-mdx-gfm": "7.0.2",
+    "@storybook/blocks": "7.0.2",
+    "@storybook/test-runner": "0.10.0",
+    "@storybook/testing-library": "0.1.0",
+    "@storybook/web-components": "7.0.2",
+    "@storybook/web-components-webpack5": "7.0.2",
     "@types/jest": "29.4.3",
     "jest": "29.4.3",
     "jest-cli": "29.4.3",
     "lit": "2.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "storybook": "7.0.0-rc.10"
+    "storybook": "7.0.2"
   },
   "dependencies": {
-    "@storybook/addon-actions": "^7.0.0",
-    "@storybook/addon-interactions": "^7.0.0-rc.11",
-    "@storybook/jest": "0.0.10"
-  },
-  "overrides": {
-    "@storybook/instrumenter": "7.0.0-rc.8"
+    "@storybook/addon-actions": "7.0.2",
+    "@storybook/addon-interactions": "7.0.2",
+    "@storybook/jest": "0.1.0"
   }
 }
